# plutus

./: .bazelignore  .bazelrc  .gitignore  .hlint.yaml  BUILD.bazel  BUILD.ghc  Bazel.md  README.md  WORKSPACE  bazel.nix  cabal.project  default.nix  haskell_packages.bzl  haskell_packages_extra.bzl  lib.nix  nixpkgs-bazel-src.json  shell-bazel.nix  stack.yaml  vis.html
.buildkite/: pipeline.yml
bench-primitives/: LICENSE  README.md  bench-primitives.cabal
bench-primitives/bench/: Bench.hs
ci/: bazel-test.sh
core-to-plc/: core-to-plc.cabal
docs/fomega/: fomega.cabal
docs/fomega/deep-isorecursive/: README.md
jobsets/: default.nix  release.nix  simple-pr-dummy.json  spec.json
language-plutus-core/: .dir-locals.el  BUILD.bazel  bigPlc.plc  language-plutus-core.cabal
language-plutus-core/bench/: Bench.hs  bigPlc.plc
language-plutus-core/docs/: Holed types.md
language-plutus-core/test/: Spec.hs
language-plutus-core/test/Evaluation/: CkMachine.hs
language-plutus-core/test/Pretty/: Readable.hs
language-plutus-core/test/Quotation/: Spec.hs
language-plutus-core/test/TypeSynthesis/: Spec.hs
marlowe/: .dir-locals.el  Fun.marlowe  marlowe.cabal
marlowe-playground-client/src/: MainFrame.purs  MonadApp.purs  Simulation.purs  Types.purs
marlowe-playground-client/src/Blockly/: Generator.js  Generator.purs
marlowe-playground-client/src/Marlowe/: Blockly.purs  Gen.purs  GenNew.purs  Parser.purs  ParserNew.purs  Pretty.purs  Semantics.purs  SemanticsNew.purs  Test.purs
marlowe-playground-client/test/: Main.purs
marlowe-playground-client/test/Marlowe/: BlocklyTests.purs  ContractTests.purs  ParserTests.purs
marlowe/test/: Spec.hs
marlowe/test/Spec/: Temp.hs
pkgs/: default.nix  regen.nix
playground-common/src/: Schema.hs
plutus-contract-exe/: plutus-contract-exe.cabal
plutus-contract-exe/docs/: contract-api.adoc
plutus-contract-exe/examples/crowdfunding/: Main.hs
plutus-contract-exe/examples/guessing-game/: Main.hs
plutus-contract-exe/test/: Spec.hs
plutus-contract-exe/test/Spec/: Contract.hs  Crowdfunding.hs  Game.hs  HUnit.hs  State.hs
plutus-core-interpreter/: .dir-locals.el  BUILD.bazel
plutus-exe/: .dir-locals.el  BUILD.bazel
plutus-ir/: .dir-locals.el  BUILD.bazel  plutus-ir.cabal
plutus-ir/src/Language/PlutusIR/Compiler/: Definitions.hs  Error.hs
plutus-ir/test/: Spec.hs
plutus-playground/: README.md  configuration.nix
plutus-playground-client/src/: Action.purs  Chain.purs  Gists.purs  MainFrame.purs  Types.purs
plutus-playground-lib/: plutus-playground-lib.cabal
plutus-playground-lib/src/Playground/: API.hs  Contract.hs  TH.hs
plutus-playground-server/: plutus-playground-server.cabal
plutus-playground-server/app/: PSGenerator.hs
plutus-playground-server/src/Playground/: Interpreter.hs
plutus-playground-server/test/Playground/: UsecasesSpec.hs
plutus-playground-server/usecases/: CrowdFunding.hs
plutus-playground/deployment/nixops/: default-machine.nix  default.nix  network.nix  playground.nix
plutus-playground/deployment/terraform/: loadbalancing.tf  machines.tf  nixops.tf  playground.tf  ssh_config.tf  terraform.tfvars  variables.tf
plutus-playground/plutus-playground-client/: .gitignore  BUILD  BUILD.bazel  WORKSPACE  bower-packages.nix  bower.json  default.nix  entry.js  nixpkgs-src.json  package.json  purescript-dom.patch  purescript-strings.patch  webpack-bazel.config.js  webpack.config.js  yarn.nix
plutus-playground/plutus-playground-client/rules_purescript-master/: WORKSPACE
plutus-playground/plutus-playground-client/src/: Action.purs  Bootstrap.purs  MainFrame.purs  StaticData.purs  Types.purs  Wallet.purs
plutus-playground/plutus-playground-client/static/: BUILD  BUILD.bazel  main.less  main.scss  (+1 more)
plutus-playground/plutus-playground-lib/: .dir-locals.el  BUILD.bazel  plutus-playground-lib.cabal
plutus-playground/plutus-playground-lib/src/Playground/: API.hs  Contract.hs
plutus-playground/plutus-playground-lib/src/Playground/Interpreter/: Util.hs
plutus-playground/plutus-playground-server/: .dir-locals.el  BUILD.bazel  plutus-playground-server.cabal
plutus-playground/plutus-playground-server/src/: Auth.hs  Contract.hs  Gist.hs  PSGenerator.hs  Webserver.hs
plutus-playground/plutus-playground-server/src/Playground/: API.hs  Interpreter.hs  Server.hs
plutus-playground/plutus-playground-server/test/: GistSpec.hs  Spec.hs
plutus-playground/plutus-playground-server/test/Auth/: TypesSpec.hs
plutus-playground/plutus-playground-server/test/Playground/: APISpec.hs
plutus-tutorial/: .dir-locals.el
plutus-tx/: .dir-locals.el  BUILD.bazel  Test.hs  plutus-tx.cabal
plutus-tx-plugin/: BUILD.bazel
plutus-tx/compiler/Language/PlutusTx/Compiler/: Error.hs
plutus-tx/compiler/Language/PlutusTx/Lift/: Class.hs  Instances.hs
plutus-tx/src/Language/PlutusTx/: AssocMap.hs  List.hs  Prelude.hs
plutus-tx/test/: Spec.hs
plutus-use-cases/: .dir-locals.el  BUILD.bazel  Escrow.golden  Escrow.marlowe  Simple.golden  Simple.marlowe  plutus-use-cases.cabal
plutus-use-cases/src/Language/Marlowe/: Compiler.lhs  Parser.hs
plutus-use-cases/src/Language/Plutus/Coordination/: Visualisation.hs
plutus-use-cases/src/Language/Plutus/Coordination/Contracts/: Future.hs
plutus-use-cases/src/Language/PlutusTx/Coordination/Contracts/: CrowdFunding.hs  Future.hs  Vesting.hs
plutus-use-cases/test/: Spec.hs
plutus-use-cases/test/Spec/: Crowdfunding.hs  Future.hs  Game.hs  MarloweLang.hs  Vesting.hs  crowdfunding.pir  future.pir  multisigStateMachine.pir  vesting.pir
plutus-wallet-api/test/: Spec.hs
test-scripts/: hlint-script.nix  stylish-haskell-script.nix
wallet-api/: .dir-locals.el  BUILD.bazel  wallet-api.cabal
wallet-api/src/Ledger/: Index.hs  Interval.hs  Schema.hs  Types.hs  Validation.hs
wallet-api/src/Ledger/Ada/: TH.hs
wallet-api/src/Ledger/Value/: TH.hs
wallet-api/src/Wallet/: API.hs  Generators.hs  Visualisation.hs
wallet-api/src/Wallet/Emulator/: .#Types.hs  Http.hs  Types.hs
wallet-api/src/Wallet/UTXO/: Runtime.hs  Types.hs
wallet-api/test/: Spec.hs
(+65 files in other folders)
