load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_binary",
    "haskell_import",
)
load("@ai_formation_hazel//:hazel.bzl", "hazel_library")

binary_packages = [
    "base",
    "bytestring",
    "text",
    "lens",
    "mtl",
    "optparse-applicative",
    "prettyprinter",
    "transformers",
]

[
    haskell_import(name = name)
    for name in (list(depset(binary_packages)))
]

haskell_binary(
    name = "plutus-exe",
    srcs = ["src/Main.hs"],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [hazel_library(name) for name in binary_packages] + [
        "//plutus-core-interpreter:plutus-core-interpreter",
        "//language-plutus-core:language-plutus-core",
    ],
)

sh_test(
    name = "hlint",
    size = "small",
    srcs = ["@hlint//:bin/run.sh"],
    args = ["."],
    deps = ["//:hlint_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)

sh_test(
    name = "stylish",
    size = "small",
    srcs = ["@stylish_haskell//:bin/run.sh"],
    args = ["plutus-exe"],
    deps = ["//:stylish_haskell_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)
