load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)
load("@ai_formation_hazel//:hazel.bzl", "hazel_library")

haskell_packages = [
    "base",
    "bytestring",
    "containers",
    "hedgehog",
    "lens",
    "megaparsec",
    "mtl",
    "mmorph",
    "prettyprinter",
    "serialise",
    "text",
    "transformers",
    "algebraic-graphs",
]

test_packages = [
    "bazel-runfiles",
    "bytestring",
    "hedgehog",
    "megaparsec",
    "mmorph",
    "mtl",
    "prettyprinter",
    "serialise",
    "tasty",
    "tasty-hedgehog",
    "base",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]

haskell_library(
    name = "plutus-ir",
    srcs = glob([
        "src/**/*.hs",
        "src/**/*.hs-boot",
    ]),
    compiler_flags = [
        "-XExplicitForAll",
        "-XScopedTypeVariables",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    visibility = ["//visibility:public"],
    src_strip_prefix = "src",
    deps = [hazel_library(name) for name in haskell_packages] + [
        "//language-plutus-core:language-plutus-core",
    ],
)

haskell_test(
    name = "plutus-ir-test",
    size = "small",
    srcs = glob([
        "test/**/*.hs",
    ]),
    src_strip_prefix = "test",
    data = glob([
      "test/**/*",
    ]),
    visibility = ["//visibility:public"],
    deps = [hazel_library(name) for name in test_packages] + [
        "//language-plutus-core:language-plutus-core",
        ":plutus-ir",
    ],
)

sh_test(
    name = "hlint",
    size = "small",
    srcs = ["@hlint//:bin/run.sh"],
    args = ["."],
    deps = ["//:hlint_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)

sh_test(
    name = "stylish",
    size = "small",
    srcs = ["@stylish_haskell//:bin/run.sh"],
    args = ["plutus-ir"],
    deps = ["//:stylish_haskell_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)
