load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)

haskell_packages = [
    "base",
    "bytestring",
    "template-haskell",
]

test_packages = [
    "base",
    "bazel-runfiles",
    "filepath",
    "prettyprinter",
    "mtl",
    "template-haskell",
    "tasty",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]

haskell_library(
    name = "plutus-tx",
    srcs = glob([
        "src/**/*.hs",
    ]),
    compiler_flags = [
        "-XExplicitForAll",
        "-XScopedTypeVariables",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    visibility = ["//visibility:public"],
    src_strip_prefix = "src",
    deps = [":" + name for name in haskell_packages] + [
        "//language-plutus-core:language-plutus-core",
        "//plutus-core-interpreter:plutus-core-interpreter",
        "//plutus-tx-plugin:plutus-tx-plugin",
    ],
)

haskell_test(
    name = "plutus-tx-test",
    srcs = glob([
        "test/*.hs",
    ]),
    src_strip_prefix = "test",
    data = glob([
        "test/*.golden",
    ]),
    visibility = ["//visibility:public"],
    deps = [":" + name for name in test_packages] + [
        "//language-plutus-core:language-plutus-core",
        "//plutus-core-interpreter:plutus-core-interpreter",
        "//plutus-tx-plugin:plutus-tx-plugin",
        "//plutus-ir:plutus-ir",
        ":plutus-tx",
    ],
)

sh_test(
    name = "hlint",
    srcs = ["@hlint//:bin/run.sh"],
    args = ["."],
    deps = ["//:hlint_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)

sh_test(
    name = "stylish",
    srcs = ["@stylish-haskell//:bin/run.sh"],
    args = ["plutus-tx"],
    deps = ["//:stylish_haskell_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)
