load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)
load("@ai_formation_hazel//:hazel.bzl", "hazel_library")

haskell_packages = [
    "base",
    "bytestring",
    "containers",
    "mtl",
    "template-haskell",
    "transformers",
    "lens",
]

test_packages = [
    "base",
    "containers",
    "hedgehog",
    "tasty",
    "tasty-hedgehog",
    "text",
    "template-haskell",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]

haskell_library(
    name = "plutus-use-cases",
    srcs = glob([
        "src/**/*.hs",
    ]),
    compiler_flags = [
        "-XExplicitForAll",
        "-XScopedTypeVariables",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    src_strip_prefix = "src",
    deps = [hazel_library(name) for name in haskell_packages] + [
        "//language-plutus-core:language-plutus-core",
        "//plutus-tx:plutus-tx",
        "//plutus-tx:plutus-tx-compiler",
        "//wallet-api:wallet-api",
    ],
    visibility = ["//visibility:public"],
)
haskell_test(
    name = "plutus-use-cases-test",
    size = "medium",
    srcs = glob([
        "test/**/*.hs",
        "test/Spec.hs"
    ]),
    src_strip_prefix = "test",
    visibility = ["//visibility:public"],
    deps = [hazel_library(name) for name in test_packages] + [
        "//plutus-tx:plutus-tx",
        "//wallet-api:wallet-api",
        ":plutus-use-cases",
    ],
)

sh_test(
    name = "hlint",
    size = "small",
    srcs = ["@hlint//:bin/run.sh"],
    args = ["."],
    deps = ["//:hlint_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)

sh_test(
    name = "stylish",
    size = "small",
    srcs = ["@stylish_haskell//:bin/run.sh"],
    args = ["plutus-use-cases"],
    deps = ["//:stylish_haskell_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)
