load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)

haskell_packages = [
    "aeson",
    "base",
    "base64-bytestring",
    "bytestring",
    "containers",
    "hint",
    "http-media",
    "insert-ordered-containers",
    "memory",
    "mtl",
    "transformers",
    "lens",
    "network",
    "newtype-generics",
    "servant",
    "split",
    "swagger2",
    "template-haskell",
    "text",

]

test_packages = [
    "aeson",
    "base",
    "containers",
    "hedgehog",
    "swagger2",
    "tasty",
    "tasty-hunit",
    "template-haskell",
    "text",
    "wallet-api",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]

haskell_library(
    name = "plutus-playground-lib",
    srcs = glob([
        "src/**/*.hs",
        "src/**/*.hs-boot",
    ]),
    compiler_flags = [
        "-XExplicitForAll",
        "-XScopedTypeVariables",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    visibility = ["//visibility:public"],
    src_strip_prefix = "src",
    deps = [":" + name for name in haskell_packages] + [
        "//plutus-tx:plutus-tx",
        "//plutus-use-cases:plutus-use-cases",
        "//wallet-api:wallet-api",
    ],
)

haskell_test(
    name = "plutus-playground-lib-test",
    srcs = glob([
        "tests/**/*.hs",
    ]),
    src_strip_prefix = "test",
    data = glob([
      "tests/**/*",
    ]),
    visibility = ["//visibility:public"],
    deps = [":" + name for name in test_packages] + [
        ":plutus-playground-lib",
    ],
)

sh_test(
    name = "hlint",
    srcs = ["@hlint//:bin/run.sh"],
    args = ["."],
    deps = ["//:hlint_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)

sh_test(
    name = "stylish",
    srcs = ["@stylish-haskell//:bin/run.sh"],
    args = ["plutus-playground/plutus-playground-lib"],
    deps = ["//:stylish_haskell_lib"],
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
)
