name:           plutus-playground-lib
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>
homepage:       https://github.com/iohk/plutus-playground#readme
bug-reports:    https://github.com/iohk/plutus-playground/issues
author:         Kris Jenkins
maintainer:     kris.jenkins@tweag.io
copyright:      2018 IOHK
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iohk/plutus-playground

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
      Playground.Contract
      Playground.API
      Playground.TH
      Playground.Interpreter.Util
  other-modules:
      Contract
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , base64-bytestring
    , bytestring
    , containers
    , core-to-plc -any
    , hint >= 0.9.0
    , http-media
    , insert-ordered-containers
    , mtl
    , transformers
    , lens
    , network
    , newtype-generics
    , plutus-th
    , plutus-use-cases
    , servant
    , swagger2
    , template-haskell
    , text
    , wallet-api
  default-language: Haskell2010